# hello

./: .gitignore
hello_IPC/ClientServer1to1/: client.c  compile.sh  diagram.puml  overview.puml  server.c
hello_IPC/ClientServerNto1/: compile.sh  overview.puml
hello_IPC/msgQ/: compile.sh  recvr.c  sender.c
hello_IPC/sharedmem/: compile.sh  shm_demo.c
hello_IPC/signals/: compile.sh  ctrl_c.c  kill_sender.c  signal_types.txt
hello_IPC/tcp1to1/: compile.sh  tcp_server.c
hello_IPC/tcpNto1/: compile.sh  mx_tcp_server.c
hello_cmake/hello1/: CMakeLists.txt
hello_cmake/hello3/: CMakeLists.txt
hello_cmake/hello3/lib/math/: CMakeLists.txt
hello_cmake/hello3/lib/math/inc/: operations.hpp
hello_cmake/hello3/main/: CMakeLists.txt  main.cpp
hello_conan/basic/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cpp
hello_docker/D1/: Dockerfile  main.cpp
hello_docker/D2/: CMakeLists.txt  Dockerfile  Makefile
hello_docker/ci/: docker-compose.yml  note.txt
hello_docker/ci/artifactory/: Dockerfile
hello_docker/ci/jenkins/: Dockerfile
hello_express/: index.js
hello_node/: Readme.md  index.js
hello_opencv/: CMakeLists.txt  Core_Blending.cpp  Core_ContrastBrightness.cpp  Core_ImageContainer.cpp  Core_MaskOperations.cpp  Core_MoreOperations.cpp  Core_ScanImage.cpp  DisplayStarryNight.cpp  ImgProc_Basic_BasicThresholding.cpp  ImgProc_Basic_ErodeDilate.cpp  ImgProc_Basic_ExtractLines.cpp  ImgProc_Basic_ImagePyramid.cpp  ImgProc_Basic_Line.cpp  ImgProc_Basic_Morphology.cpp  ImgProc_Basic_Random_Text.cpp  ImgProc_Basic_Smoothing.cpp  ImgProc_Basic_ThresholdinRange.cpp  ImgProc_Hist_BackProjection.cpp  ImgProc_Hist_Calc.cpp  ImgProc_Hist_Comparison.cpp  ImgProc_Hist_Equalize.cpp  ImgProc_Transform_AddBorder.cpp  ImgProc_Transform_Affine.cpp  ImgProc_Transform_CannyEdge.cpp  ImgProc_Transform_Filter.cpp  ImgProc_Transform_HoughCircle.cpp  ImgProc_Transform_HoughLine.cpp  ImgProc_Transform_Laplace.cpp  ImgProc_Transform_Remap.cpp  ImgProc_Transform_Sobel.cpp  Proj_FaceLandmark.cpp
hello_plantuml/: sequence1.puml  statemachine1.puml
hello_qt_console/01_boxLayout/: 01_boxLayout.pro  Makefile  main.cpp
hello_qt_console/01_button/: 01_button.pro  Makefile  main.cpp
hello_qt_console/01_formLayout/: 01_formLayout.pro  Makefile  main.cpp
hello_qt_console/01_grid/: 01_grid.pro  Makefile  main.cpp
hello_qt_console/01_label/: 01_label.pro  Makefile  main.cpp
hello_qt_console/03_1sig_1slot/: 03_1sig_1slot.pro  Makefile  main.cpp
hello_qt_console/03_1sig_nslots/: 03_1sig_nslots.pro  Makefile  main.cpp
hello_qt_console/03_nsig_1slot/: 03_nsig_1slot.pro  Makefile  main.cpp
hello_qt_console/04_dialog/: 04_dialog.pro  Makefile  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp
hello_qt_console/04_menu_toolbar/: 04_menu_toolbar.pro  Makefile  main.cpp  mainwindow.cpp  mainwindow.h
hello_qt_console/hello_world/: Makefile  hello.cpp  hello_world.pro
hello_vscode/: helloworld
ros/docker_xenial/: Dockerfile  Readme.txt
someip/: .gitignore  Readme.md
someip/examples/: CMakeLists.txt  readme.txt
someip/examples/config/: vsomeip-local.json
someip/examples/hello_world/: helloworld-local.json
someip/vsomeip_app1/src/: service-example.cpp
someip/vsomeip_app2/: CMakeLists.txt
someip/vsomeip_app2/src/: client-example.cpp  service-example.cpp
someip/vsomeip_app3/: CMakeLists.txt
someip/vsomeip_app3/src/: client-example.cpp  service-example.cpp
